--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "svix": "^1.29.0"
+    "react-icons": "^5.2.1",
+    "react-simple-icons": "^1.0.0-beta.5",
+    "simple-icons": "^13.5.0",
+    "svix": "^1.29.0",
+    "swiper": "^11.1.9"
   },
   "devDependencies": {
     "@types/node": "^20",
